# ai-agent-crews

./: .env.example  .gitignore  1_email_agent.ipynb  2_email_agent_with_tool.ipynb  main.py  pyproject.toml
agents/: 4_blogpost_agent_latest.ipynb
agents/archive/: 3_blogpost_summary_agent.ipynb
agents/blogpost_generator/: crew.py
agents/email_rewrite/: crew.py
agents/email_rewrite/config/: agents.yml  tasks.yml
agents/email_rewrite/db/: jargons.json
agents/email_rewrite/tools/: jargon_replacer.py
agents/marketing_crew/: crew.py
agents/marketing_crew/config/: agents.yml  tasks.yml
agents/researcher/: crew.py
crews/: 1_email_agent.ipynb  2_email_agent_with_tool.ipynb  3_blogpost_summary_agent.ipynb  3_blogpost_summary_agent.py  4_blogpost_summary_agent_latest.ipynb
resources/drafts/: market_research_report.md
resources/drafts/blogs/: blog_post_1.md
resources/marketing_crew/drafts/: marketing_strategy.md
resources/researcher_crew/drafts/: post.md  reaserch.md
