[project]
name = "crewagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]>=0.175.0",
    "ipykernel>=6.30.1",
]
develop = [
    "ipykernel>=6.30.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.1",
]
